<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ManageTask" />

    <Button
        android:id="@+id/btnPomorado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/StayFocus" />

    <Button
        android:id="@+id/btnPerform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TrackProgress" />

    <Button
        android:id="@+id/btnSetting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Setting" />

    <Button
        android:id="@+id/btnInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/InfoScreen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_menu_today" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/presence_away" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@android:drawable/ic_dialog_info" />

    </LinearLayout>
</LinearLayout>